Upgrade to Java 25 and JavaFX 26