@@ -9,10 +9,11 @@ dependencies {
 }
 
 javafx {
-    version = '21.0.4'
+    version = '26.0.2'
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
 }
 
 application {
     mainClass = 'ee.matteus.pannukas.gui.PancakePlannerApp'
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
